# scratchtoctranspiler

./: CMakeLists.txt  CMakeSettings.json  Makefile  conanfile.txt  readme.md
cmake/: CMakeLists.txt
documentation/: contributions.md  license.md  style.md  thirdpartylicenses.md  todo.md
output/: CMakeLists.txt  data.c  data.h  output.c  schedule.c  schedule_manager.c  schedule_manager.h  scratch.h  sprite1.c  sprite1.h  sprite_data.c  sprite_data.h
output/runtime/: control.c  control.h  data.c  data.h  event.h  garbagecollector.c  garbagecollector.h  looks.c  looks.h  main.c  main.h  motion.c  motion.h  operators.c  operators.h  output.h  pen.c  pen.h  renderer.c  renderer.h  schedule.h  scratch.c  scratch.h  sensing.c  sensing.h  sound.c  sound.h  turbowarp.h  types.h
scratch/: Project.sb3  fix.bat  project.json
scratch/Project/: project.json
src/: buildccode.c  buildccode.h  main.c  parsejson.c  parsejson.h  std_vector.h  types.h  util.c  util.h
